css/structure.css
.master-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.header-bar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: auto;
    margin-bottom: 10px;
}

.logo {
    width: 20%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.logo-icon {
    width: auto;
    height: auto;
}

.logo-text {
    font-size: 150%;
    font-weight: bolder;
    margin-left: 1%;
    height: auto;
}

.nav-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 40%;
    margin-right: 5%;
}

.link-buttons {
    margin-right: 1%;
}

.geborenam-page {
    margin-left: 1%;
}

.main-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.main-text {
    margin: 5px;
    width: 75%;
    height: auto;
}

.aside {
    margin: 5px;
    margin-left: 0px;
    width: 25%;
    height: auto;
}

.footer-container {
    line-height: 500%;
    height: auto;
    margin-top: 10px;
}

